--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss-import": "^13.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-responsive": "^9.0.2",
     "react-responsive-masonry": "^2.1.7",
     "react-scroll": "^1.8.1",
     "react-slick": "^0.27.13",
